--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <div>toy_servlets - Wonki</div>
+    <a href="/polls/PollServlet_us?QUESTIONS_UID=1">DetailsServlets_us</a>
   </body>
 </html>
