--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div>toy_servlets - Wonki</div>
-    <a href="/polls/PollServlet_us?QUESTIONS_UID=1">DetailsServlets_us</a>
+    <a href="/details_us.jsp/QUESTIONS_UID=Q1">details_us</a>
   </body>
 </html>
